# NXP-i.MX7-Sabre_dualcoreDebugTest

./: Blank_solution+MCIMX7D7.cbuild-run.yml  Blank_solution.cbuild-idx.yml  Blank_solution.cbuild-pack.yml  Blank_solution.cbuild-set.yml  Blank_solution.csolution.yml  MCIMX7D7.cbuild-run.yml  README.md  vcpkg-configuration.json
Cortex-A7/: .clangd  Cortex-A7.Debug+MCIMX7D7.cbuild.yml  Cortex-A7.Debug+MCIMX7D7_A7.cbuild.yml  Cortex-A7.Debug+MCIMX7D7_M4.cbuild.yml  Cortex-A7.cproject.yml  main.cpp  makefile
Cortex-A7/RTE/Device/MCIMX7D7_Cortex-A7/: iMX7D_A7.sct  mmu_iMX7D_A7.c  regions_MCIMX7D-SABRE.h  system_iMX7D_A7.c
Cortex-A7/RTE/_Debug_MCIMX7D7/: RTE_Components.h
Cortex-A7/RTE/_Debug_MCIMX7D7_A7/: RTE_Components.h
Cortex-M4/: .clangd  Blinky_M4.uvguix  Blinky_M4.uvguix.chetan01  Blinky_M4.uvoptx  Blinky_M4.uvprojx  Blinky_M4_CMSIS_RTOS_Blinky.sct  Cortex-M4.Debug+MCIMX7D7.cbuild.yml  Cortex-M4.cproject.yml  Debug_SRAM.ini  MCIMX7D_Cortex-M4.sct  main.c
Cortex-M4/RTE/CMSIS/: RTX_Conf_CM.c
Cortex-M4/RTE/Device/MCIMX7D7_Cortex-A7/: mem_iMX7D_A7.h  startup_iMX7D_A7.c.base@1.0.0  system_iMX7D_A7.h
Cortex-M4/RTE/Device/MCIMX7D7_Cortex-M4/: regions_MCIMX7D-SABRE.h  startup_iMX7D_M4.s.base@1.0.0  system_iMX7D_M4.c  system_iMX7D_M4.c.base@1.0.0  system_iMX7D_M4.h
Cortex-M4/RTE/_CMSIS-RTOS_Blinky/: RTE_Components.h
Cortex-M4/RTE/_CMSIS_RTOS_Blinky/: RTE_Components.h
Cortex-M4/RTE/_Debug_MCIMX7D7/: RTE_Components.h
Cortex-M4/RTE/_Debug_MCIMX7D7_A7/: RTE_Components.h
Cortex-M4/RTE/_Debug_MCIMX7D7_M4/: RTE_Components.h
tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
tmp/Cortex-M4.Debug+MCIMX7D7/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
tmp/Cortex-M4.Debug+MCIMX7D7/src/Cortex-M4.Debug+MCIMX7D7-stamp/: Cortex-M4.Debug+MCIMX7D7-configure-.cmake  Cortex-M4.Debug+MCIMX7D7-database-.cmake  Cortex-M4.Debug+MCIMX7D7-source_dirinfo.txt
tmp/Cortex-M4.Debug+MCIMX7D7/tmp/: Cortex-M4.Debug+MCIMX7D7-cfgcmd.txt  Cortex-M4.Debug+MCIMX7D7-mkdirs.cmake
